--- a/styles/blocks/form.css
+++ b/styles/blocks/form.css
@@ -5,9 +5,9 @@
 }
 
 .form {
-  width: 66%;
+  width: 97%;
   margin-top: 57px;
-  padding: 33px 6%;
+  padding: 38px 12%;
   background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
@@ -18,7 +18,7 @@
 }
 
 .form__form-in {
-  margin-top: 15px;
+  margin-top: 10px;
   display: flex;
 }
 
@@ -34,11 +34,11 @@
 }
 
 .form__text-input {
-  margin-top: 10px;
+  margin-top: 3px;
   width: 100%;
   border-radius: 3px;
   border: none;
-  padding: 10px;
+  padding: 16px 10px;
 }
 
 .form__text-input::placeholder {
@@ -46,7 +46,7 @@
 }
 
 .form__message {
-  margin-top: 10px;
+  margin-top: 16px;
 
 }
 
@@ -55,8 +55,8 @@
 }
 .form__textarea {
   width: 100%;
-  margin-top: 10px;
-  padding: 10px;
+  margin-top: 5px;
+  padding: 7px 10px;
   height: 90px;
   border-radius: 3px;
   border: none;
@@ -89,4 +89,8 @@
   text-transform: uppercase;
   letter-spacing: 2.4px;
   cursor: pointer;
+}
+
+.form__button:hover {
+  background: #ec1e79;
 }
