--- a/styles/blocks/prices.css
+++ b/styles/blocks/prices.css
@@ -10,10 +10,11 @@
 
 .tarif__item {
   margin-top: 37px;
-  width: 250px;
+  margin-bottom: 43px;
+  width: 31%;
 }
 .tarif__tittle-img {
-  height: 153px;
+  height: 166px;
   overflow: hidden;
   border-radius: 3px;
   position: relative;
