--- a/styles/layout/base.css
+++ b/styles/layout/base.css
@@ -28,6 +28,7 @@ button {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  padding: 0;
   font-weight: normal;
 }
 
@@ -42,14 +43,14 @@ table {
 
 .wrapper {
   overflow: hidden;
-  min-width: 1100px;
+  min-width: 1200px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .container {
-  max-width: 1060px;
+  max-width: 1160px;
   margin: 0 auto;
 }
 
@@ -57,15 +58,15 @@ table {
   width: 100%;
 }
 .container--maincontent {
-  width: 1060px;
-  margin-top: 40px;
+  width: 1160px;
+  margin-top: 29px;
   display: flex;
   flex-flow: row;
 }
 
-.container--prices {
+.container--maincontent.fb {
+  margin-top: 45px;
 }
-
 .tittle {
   font-family: gotham-b;
   font-size: 49px;
@@ -73,11 +74,9 @@ table {
 }
 
 .sidebar {
-  width: 17%;
-
+  width: 25%;
 }
 
 .content {
-  margin-top: 10px;
-  width: 80%;
+  width: 75%;
 }
