--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
 @import url('./layout/normalize.css');
 @import url('./layout/base.css');
 
+@import url('./blocks/intro.css');
 @import url('./blocks/header.css');
 @import url('./blocks/logo.css');
 @import url('./blocks/contacts.css');
