--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -1,9 +1,9 @@
 .footer {
-  margin-top: 60px;
+  margin-top: 55px;
   background-color: #27273e;
+  padding: 10px 0;
 }
 .footer .container {
-  height: 77px;
   display: flex;
   justify-content: space-between;
   align-items: center;
