--- a/styles/blocks/form.css
+++ b/styles/blocks/form.css
@@ -1,11 +1,11 @@
 .feedback__container {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
 }
 
 .form {
-  width: 97%;
+  width: 88%;
   margin-top: 57px;
   padding: 38px 12%;
   background-color: #f5f5f5;
@@ -40,10 +40,11 @@
   border: none;
   padding: 16px 10px;
   outline: none;
+  border: 1px solid transparent;
 }
 
 .form__text-input:focus {
-  outline: 1px solid #ec1e79;
+  border-color: #ec1e79;
   border-radius: 3px;
 }
 
@@ -68,9 +69,10 @@
   border: none;
   resize: none;
   outline: none;
+  border: 1px solid transparent;
 }
 .form__textarea:focus {
-  outline: 1px solid #ec1e79;
+  border-color: #ec1e79;
 }
 .yourtext__textarea::placeholder {
   color: rgba(34, 31, 31, 0.5);
@@ -130,15 +132,17 @@
   padding: 18px 21px;
   border-radius: 3px;
   border: none;
-  background: #27273e;
+  background-color: #27273e;
   color: #fff;
   font-family: gotham-b;
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2.4px;
   cursor: pointer;
+  transition: background-color .4s;
 }
 
 .form__button:hover {
-  background: #ec1e79;
+  background-color: #ec1e79;
+  transition: background-color .4s;
 }
