--- a/styles/blocks/partners.css
+++ b/styles/blocks/partners.css
@@ -1,7 +1,8 @@
 .partner {
-  margin-top: 25px;
-  margin-bottom: 20px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   text-align: center;
+  border: 1px #e8e9ed solid;
 }
 
 .tittle.parts{
@@ -28,8 +29,11 @@
   max-width: 141px;
   max-height: 55px;
   filter:grayscale(100%);
+  cursor: pointer;
+  transition: filter .4s;
 }
 
 .part-icons__logo:hover {
   filter:none;
+  transition: filter .4s;
 }
