--- a/styles/blocks/social.css
+++ b/styles/blocks/social.css
@@ -15,7 +15,7 @@
   display: flex;
   align-self: center;
   justify-content: space-between;
-  width: 140px;
+  width: 50%;
   margin-top: 5px;
 }
 
