--- a/styles/blocks/intro.css
+++ b/styles/blocks/intro.css
@@ -10,6 +10,37 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  animation: myAnimation 1s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+@keyframes myAnimation {
+  0% {
+    transform: scale(.01);
+    opacity: 0;
+  }
+  20% {
+    transform: rotate(5deg) scale(.1);
+  }
+  
+  60% {
+    transform: rotate(-5deg) scale(.5);
+  }
+  
+  70% {
+    transform: rotate(5deg) scale(1);
+    
+  }
+  80% {
+    opacity: 1;
+    transform: rotate(-3deg) scale(1);
+  }
+  90% {
+    transform: rotate(3deg) scale(1);
+  }
+
+  100% {
+    transform: rotate(0deg);
+
+  }
 }
 
 .put-in__sing {
