--- a/styles/blocks/intro.css
+++ b/styles/blocks/intro.css
@@ -21,19 +21,19 @@
     transform: rotate(5deg) scale(.1);
   }
   
-  60% {
-    transform: rotate(-5deg) scale(.5);
+  50% {
+    transform: rotate(-5deg);
   }
   
-  70% {
+  60% {
     transform: rotate(5deg) scale(1);
     
   }
-  80% {
+  70% {
     opacity: 1;
     transform: rotate(-3deg) scale(1);
   }
-  90% {
+  80% {
     transform: rotate(3deg) scale(1);
   }
 
